Fix skill lock button being invisible on NPC sheet

--- a/less/actors.less
+++ b/less/actors.less
@@ -1238,6 +1238,19 @@
       }
     }
   }
+
+  .skill-lock-button {
+    flex: 0;
+    &:before {
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      content: "\f023";
+      margin-right: 0.5em;
+    }
+    &.unlocked:before {
+      content: "\f3c1";
+    }
+  }
 }
 
 .locked {
